# SOI-synchronization-with-monitors

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  linux.yml  macos.yml  windows.yml
include/: AsyncPrint.h  Condition.h  Consumer.h  Host.h  Monitor.h  MonitorGuard.h  Producer.h  Semaphore.h  SyncQueue.h
include/hosts/: ConsumerC.h  ConsumerD.h  ProducerA.h  ProducerB.h
src/: AsyncPrint.cpp  Condition.cpp  Consumer.cpp  Host.cpp  Main.cpp  Monitor.cpp  MonitorGuard.cpp  Producer.cpp  Semaphore.cpp  SyncQueue.cpp
src/hosts/: ConsumerC.cpp  ConsumerD.cpp  ProducerA.cpp  ProducerB.cpp
